--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,37 +10,39 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Aplikasi_Silastik"
-        android:networkSecurityConfig="@xml/network_security_config"
-        tools:targetApi="31">
-
-        <!-- ProfileActivity -->
+        tools:targetApi="31" >
+        <activity
+            android:name=".RiwayatDataActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DataActivity"
+            android:exported="false" />
+        <activity
+            android:name=".KonsultasiActivity"
+            android:exported="false" /> <!-- ProfileActivity -->
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
 
         <meta-data
             android:name="com.google.android.actions"
-            android:resource="@xml/network_security_config" />
-
-        <!-- RegisterActivity -->
+            android:resource="@xml/network_security_config" /> <!-- RegisterActivity -->
         <activity
             android:name=".RegisterActivity"
-            android:exported="true" />
-
-        <!-- LoginActivity -->
+            android:exported="true" /> <!-- LoginActivity -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- MainActivity -->
+        </activity> <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true" />
