--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,16 +14,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Aplikasi_Silastik"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".EditProfileActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RiwayatKonsultasi"
+            android:exported="false" />
         <activity
             android:name=".RiwayatDataActivity"
             android:exported="false" />
         <activity
             android:name=".DataActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".KonsultasiActivity"
-            android:exported="false" /> <!-- ProfileActivity -->
+            android:exported="true" /> <!-- ProfileActivity -->
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
@@ -36,7 +42,7 @@
             android:exported="true" /> <!-- LoginActivity -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
