--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Aplikasi_Silastik"
         tools:targetApi="31">
         <activity
+            android:name=".EditPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="true" />
         <activity
